Compiler/src/main/java/Testing/Tests/SemanticTests/AST/failing/OperationWithoutInt.ru
/? Descripción: caso de prueba que verifica que ambos lados de una operacion sean de tipo int
/? cuando se trata de una operacion aritmetica o de mayor o menor
/? Salida esperada:
/? ERROR: SEMANTICO - SENTENCIAS
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | Linea 9 | COLUMNA 13 | PARA REALIZAR ESTA OPERACIÓN AMBOS OPERANDOS DEBEN SER DE TIPO INT
start{
Int a;
a = (2 * 3) + true;
}